# ecobalyse-data

./: .buildpacks  .env.sample  .gitignore  .gitpod.yml  .jupyter_ystore.db  .pre-commit-config.yaml  .prettierignore  .prettierrc  .slugignore  Makefile  Procfile  README.md  activities.json  activities_to_create.json  buildpack-run.sh  bw.py  cmaps_activities.json  cmaps_activities_to_create.json  cmaps_impact_deltas.csv  compose.yaml  config.py  create_activities.py  export_cmaps_deltas.py  impacts.json  import_ecoinvent.py  import_food.py  import_method.py  install_miniconda.sh  justfile  meat_to_animal.json  package-lock.json  package.json  pyproject.toml  servers.conf.erb  settings.toml  simapro-biosphere.json  simapro_export.csv  start-bo.sh  stats.py
.github/workflows/: ci.yml  data-pipeline.yml  export_checks.yml
archive/: docker.sh
archive/docker/: requirements.txt
backend/: .env.testing  README.md  app.py  pyproject.toml  user.json
backend/src/: app.py
backend/src/app/cli/: commands.py
backend/src/app/config/: app.py  base.py
backend/src/app/db/migrations/versions/: 2025-03-25_initial_migration_99129052547d.py  2025-03-26_initial_migration_e452eac6cd25.py  2025-03-27_initial_migration_95c51db10871.py  2025-04-07_elements_should_be_nullable_aecdd11445b3.py  2025-04-15_initial_migration_b418b8a1c25d.py  2025-04-16_initial_migration_5cfeb6c7c5ca.py  2025-04-30_initial_migration_ca16f6b89165.py  2025-05-05_initial_migration_f982fac37b52.py  2025-05-19_initial_migration_2fc9b0736346.py  2025-05-19_initial_migration_59a3ab9d8bc7.py  2025-05-22_initial_migration_a7791a2a55ae.py  2025-05-26_initial_migration_bdd3d7322c02.py  2025-05-26_initial_migration_c708270d9301.py
backend/src/app/db/models/: __init__.py  component.py  component_element.py  component_element_transform.py  process.py  token.py  user.py  user_profile.py
backend/src/app/domain/accounts/: deps.py  guards.py  middlewares.py  schemas.py  services.py  signals.py  urls.py
backend/src/app/domain/accounts/controllers/: access.py
backend/src/app/domain/components/: schemas.py  services.py  urls.py
backend/src/app/domain/components/controllers/: component.py
backend/src/app/domain/processes/: services.py
backend/src/app/models/: component.py
backend/src/app/server/: core.py  plugins.py
backend/src/controllers/: component.py
backend/tests/: conftest.py  data_fixtures.py
backend/tests/integration/: conftest.py  test_access.py  test_components.py
brightway/: README.md
brightway/export_agb/: checks.py  export.py  impacts.py  processes.json
common/: __init__.py  base_ingredient.py  brightway_patch.py  delete_database.py  delete_methods.py  export.py  impacts.py  import_.py  sync_datapackages.py  utils.py
common/bw/: simapro_json.py
common/distances/: CountryDistances.py  transports.py
docker/: Dockerfile  entrypoint.sh
ecobalyse_data/: computation.py  export.py  logging.py  s3.py  tests.py  typer.py
ecobalyse_data/bw/: analyzer.py  ecospold_export.py  search.py  setup.py  simapro_export.py  strategy.py
ecobalyse_data/data/: density_DB.xlsx  flows_biosphere_310.csv  metadata.csv
ecobalyse_data/detect/: __init__.py  cooked_to_raw.py  density.py  important.py  metadata.py  scenario.py
ecobalyse_data/export/: export_generic.py  food.py  land_occupation.py  object.py  process.py  textile.py  utils.py
food/: activities.json  activities_to_create.json  base_ingredients.json  base_products.json  density.py  export.py
food/ecosystemic_services/: README.md  animal_to_meat.json  ecosystemic_factors.csv  ecosystemic_services.py  feed.json  raw_to_transformed_ratios.json  ugb.csv
food/metadata/: README.md  cooked_to_raw.csv  cropgroup.csv  density.csv  export.py  food_type.csv  food_type_cooked_to_raw.csv  food_type_density.csv  food_type_inedible_part.csv  foodon_loader.py  nova_classification.csv  predict.py  pyproject.toml
food/metadata/reference/: agb_inedible.csv  cropgroup.csv  density.csv  food_type.csv  inedible_part.csv  processing_state.csv
food/metadata/source/: new_ingredient_FR.csv
lci_catalog/agribalyse-3-2/: agave-default.json  alfalfa-organic-2025.json  alfalfa-organic-fr.json  alga.json  almond-in-shell-fr.json  almond-inshell-fr-2025.json  aluminium.json  anchovy-fr-2025.json  apple-compote-fr-2025.json  apple-fr.json  apple-juice-2025.json  apricot-fr.json  artichoke-fr.json  asian-250g-pasta-opp-bag.json  asian-60g-pasta-opp-bag.json  asparagu-fr.json  avocado-non-eu-2025.json  avocado-organic-2025.json  avocado-organic-fr.json  baby-250g-deserts-proxy-pack-rigid-plastic-other-than.json  baby-340g-biscuits-cereals-proxy-pack-rigid-plastic-other.json  baby-800g-food-powder-proxy-pack-steel.json  bacon-fr-2025.json  bacon-fr.json  baguette-250g-proxy-pack-cardboard.json  balsamic-vinegar-2025.json  banana-non-eu-2025.json  banana-wi.json  bar-100g-chocolate-proxy-pack-aluminium.json  barley-2025.json  barley-eu-2025.json  barley-grain.json  barley-organic-2025.json  barley-whole-fr.json  bay-leaf-fr.json  bean-fr.json  bean-organic-2025.json  beef-244g-veal-tray-metallic-plastic-bag.json  beef-250g-veal-apet-pe-tray-lid.json  beef-cattle-conventional-fr-live.json  (+625 more)
lci_catalog/custom/: aluminum-extrusion.json  aluminum-rolling-0-2-mm.json  aluminum-rolling-0-26-mm.json  bleaching.json  (+79 more)
migrations/: 2025-11-06-refactor-activities-to-merge-processes-metadata.py  2025-11-06-refactor-activities-to-nested-format.py  2026-03-17-add-food2-to-activities.py  2026-04-13-add-food-type-to-food-items.py  2026-06-14-explode-activities-json.py
models/: process.py
notebooks/: explore.py  ingredients.py
object/: activities.json  activities_to_create.json  export.py
spapi/: simapro.py
tests/: activities-schema.json  activities_to_create.json  conftest.py  processes-schema.json  test_base_ingredient.py  test_bin_scripts.py  test_ecosystemic_services.py  test_export.py  test_id_unicity.py  test_import.py  test_json_consistency.py  test_json_format_encoder.py  test_process_relationships.py  test_raw_to_transformed_ratios.py
textile/: activities.json  export.py
(+810 files in other folders)
