[project]
name = "ecobalyse-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
#extra-index-url="https://download.pytorch.org/whl/cpu"
dependencies = [
    "boto3>=1.40",
    "bw2analyzer==0.11.7",
    "bw2calc==2.0.1",
    # Waiting for this PR to be merged https://github.com/brightway-lca/brightway2-data/pull/235
    "bw2data @ git+https://github.com/vjousse/brightway2-data@1aa5d0a048b6ec46484c1fe8e50a94650760f869",
    "bw2io[multifunctional]==0.9.5",
    "bw2parameters==1.1.0",
    "colorama",
    "deadcode>=2.4.1",
    "dynaconf>=3.2.10",
    "fastapi[all]>=0.115.6",
    "flatdict>=4.0.1",
    "frozendict>=2.4.6",
    "ipywidgets>=8.1.5",
    "jupyter-collaboration>=3.0.1",
    "jupyterlab>=4.3.2",
    "loguru>=0.7.2",
    "notebook>=7.3.0",
    "orjson>=3.10.15",
    "platformdirs>=4.5",
    "ptpython>=3.0.29",
    "pydantic-settings>=2.6.1",
    "pytest-mock>=3.14.0",
    "sentence_transformers",
    "torch",
    "typer>=0.15.1",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
    "vulture>=2.14",
    "wrapt>=1.17.0",
    'pypardiso>=0.4.6; platform_machine!="arm64" and platform_machine!="aarch64"',
]

[tool.uv.sources]
# forcing cpu-only index for pytorch to avoid too much downloads
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
# index for torch on CPU
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "tests",
]
