[project]
name = "ecobalyse-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litestar[sqlalchemy,standard]>=2.15.1",
    "aiosqlite>=0.21.0",
    "advanced-alchemy>=1.0.1",
    "msgspec>=0.19.0",
    "check-jsonschema>=0.32.1",
    "pytest-databases>=0.12.0",
    "psycopg>=3.2.6",
    "asyncpg>=0.30.0",
    "litestar-vite>=0.13.1",
    "litestar-granian>=0.12.2",
    "structlog>=25.2.0",
    "orjson>=3.10.16",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "setuptools"]

[tool.hatch.metadata]
# direct dependency references, e.g `pip @ git+https://github.com/pypa/pip.git@master`
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["src", "."]
ignore-vcs = true
sources = ["src"]

[tool.hatch.build.targets.sdist]
exclude = [".github", "docs"]
include = ["src/*", "tests/*", "public/*", "tools/*", "resources", "LICENSE"]
skip-excluded-dirs = false

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
backend = "app.__main__:run_cli"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]

[lint]
extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = ["."]
