[tool.uv.sources]
# forcing cpu-only index for pytorch to avoid too much downloads
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
# index for torch on CPU
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project]
name = "metadata"
version = "0.1.0"
description = "Experiment to automate the production of metadata for new ingredients"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "colorama>=0.4.6",
    "torch>=2.9.1",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.2",
    "pronto>=2.7.2",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "bw2data>=4.5.4",
]

